--- a/GCNav/Navigator.xaml
+++ b/GCNav/Navigator.xaml
@@ -10,7 +10,7 @@
     
       <Grid >
         <Grid Name="curImageContainer" HorizontalAlignment="Right" VerticalAlignment="Top"> <!-- jcchin - HorizontalAlignment temporarily changed from Right to Center so I can open Artwork Mode in 1280 x 800 resolution -->
-            <Border CornerRadius="5" Padding="10"  HorizontalAlignment="Left" VerticalAlignment="center" Margin="5" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
+            <Border Name="imageBorder" CornerRadius="5" Padding="10"  HorizontalAlignment="Left" VerticalAlignment="center" Margin="9" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
                 <Grid Name="curImageCanvas" Height="250" HorizontalAlignment="Center" VerticalAlignment="Top">
                 </Grid>
             </Border>
@@ -29,27 +29,33 @@
         
         <Grid Name="curInfoContainer" HorizontalAlignment="Left" VerticalAlignment="Top">
          
-            <Border CornerRadius="5" Padding="10" HorizontalAlignment="Right" VerticalAlignment="center" Margin="10" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
-              <s:SurfaceScrollViewer x:Name="infoScroll"  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                <Canvas Name="curInfoCol">
-                    <!--<Grid.RowDefinitions>
+            <Border CornerRadius="5" Padding="10" HorizontalAlignment="Right" VerticalAlignment="center" Margin="5" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
+              <s:SurfaceScrollViewer x:Name="infoScroll"  VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Disabled">
+                <Grid Name="curInfoCol">
+                    <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="30"/>
-                        <RowDefinition />
-                    </Grid.RowDefinitions>-->
-
-                        <Rectangle Name="titleBack" Fill ="#24524A" Canvas.Top="5" />
-                        <TextBlock Name="title" Text="" Canvas.Top="5" Canvas.Left="10" Foreground="White" TextAlignment="Center" FontSize="20" ></TextBlock>
-                        <TextBlock Name="artist" Text="" Canvas.Top="35" Canvas.Left="10" Foreground="Black"  TextAlignment="Center" FontSize="20"/>
-                        <TextBlock Name="date" Text="" Canvas.Top="60" Canvas.Left="10" Foreground="Black"  TextAlignment="Center" FontSize="20"/>
-                        <TextBlock Name="medium" Text="" Canvas.Top="85" Canvas.Left="10" Foreground="Black" TextAlignment="Center" FontSize="20"/>
-                        <Rectangle Name="KeywordBack" Canvas.Top="110" Fill ="#44000000"/>
-                        <TextBlock  Name="KeywordsTitle" Canvas.Top="110" Canvas.Left="10" Text="Keywords:" Visibility="Hidden"  Foreground="White" TextAlignment="Center" FontSize="16"></TextBlock>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                            
+                    </Grid.ColumnDefinitions>
+                        <Rectangle Name="titleBack" Grid.Row="0" Grid.Column="0" Fill ="#24524A" Margin="-10,0,0,0" />
+                        <TextBlock Name="title" Grid.Row="0" Grid.Column="0" Text=""   Foreground="White" TextAlignment="Left" FontSize="20" Margin="5,0,0,0" ></TextBlock>
+                        <TextBlock Name="artist" Grid.Row="1" Grid.Column="0" Text="" Foreground="Black"  TextAlignment="Left" FontSize="20" Margin="5,0,0,0"/>
+                        <TextBlock Name="date" Grid.Row="2" Grid.Column="0" Text=""  Foreground="Black"  TextAlignment="Left" FontSize="20" Margin="5,0,0,0"/>
+                        <TextBlock Name="medium" Grid.Row="3" Grid.Column="0" Text=""  Foreground="Black" TextAlignment="Left" FontSize="20" Margin="5,0,0,0"/>
+                        <Rectangle Name="KeywordBack" Grid.Row="4" Grid.RowSpan="2" Grid.Column="0" Fill ="#44000000" Margin="-10,0,0,0"/>
+                        <TextBlock  Name="KeywordsTitle" Grid.Row="4" Grid.Column="0" Visibility="Hidden" Text="Keywords:" Foreground="White" TextAlignment="Center" FontSize="18" Margin="5,0,0,0"></TextBlock>
                         <!--<Rectangle Name="curKeywordsBack" Canvas.Top="135" Fill ="#44000000"/>-->
-                        <TextBlock  Name="curKeywords" TextWrapping="Wrap" Canvas.Top="135" Canvas.Left="10" Text=""  Visibility="Hidden"  Foreground="White"  TextAlignment="Left" FontSize="16"></TextBlock>
-                    
-                    </Canvas>
-               </s:SurfaceScrollViewer>
+                    <!--<s:SurfaceScrollViewer x:Name="keywordscroll" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Grid.Row="5" Grid.Column="0">-->
+                        <TextBlock  Name="curKeywords" Text=""  Visibility="Hidden"  Foreground="White"  TextAlignment="Left" FontSize="18" Margin="5,10,0,0" Grid.Row="5" Grid.Column="0"></TextBlock>
+                    <!--</s:SurfaceScrollViewer>-->
+                </Grid>
+             </s:SurfaceScrollViewer>
             </Border>
           
         </Grid>
