--- a/trunk/GCNav/Navigator.xaml
+++ b/trunk/GCNav/Navigator.xaml
@@ -9,9 +9,13 @@
              d:DesignHeight="300" d:DesignWidth="300" xmlns:my="http://schemas.microsoft.com/surface/2008">
     
       <Grid >
+
         <Grid Name="curImageContainer" HorizontalAlignment="Right" VerticalAlignment="Top"> <!-- jcchin - HorizontalAlignment temporarily changed from Right to Center so I can open Artwork Mode in 1280 x 800 resolution -->
-            <Border Name="imageBorder" CornerRadius="5" Padding="10"  HorizontalAlignment="Left" VerticalAlignment="center" Margin="9" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
-                <Grid Name="curImageCanvas" Height="250" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Border Name="imageBorder" CornerRadius="5" Padding="10"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="9" Background = "#FFA7C99F" BorderBrush="Black" BorderThickness="4">
+                <Grid Name="curImageCanvas1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Canvas Name="curImageCanvas" >
+                        
+                    </Canvas>
                 </Grid>
             </Border>
         </Grid>
