--- a/SurfaceApplication3/AddNewImageControl.xaml
+++ b/SurfaceApplication3/AddNewImageControl.xaml
@@ -108,7 +108,7 @@
             <s:SurfaceTextBox x:Name="title_tag"  Width="308" BorderBrush="#227174"  BorderThickness="2" Canvas.Left="312" Canvas.Top="47" SelectionBrush="{x:Null}" Foreground="Black" Background="{x:Null}" TextWrapping="Wrap" Height ="30" FontSize="15" AutoWordSelection="True" VerticalContentAlignment="Center" MinHeight="0" MinWidth="0" />
 
                     <Label Content="Year:" Canvas.Left="218" Canvas.Top="85" Width="82" Foreground="Black"  FontSize="18" Height="30"  />
-            <s:SurfaceTextBox x:Name="year_tag" Width="308" BorderBrush="#227174" BorderThickness="2" Canvas.Left="312" Canvas.Top="86" Background="{x:Null}" TextWrapping="Wrap" Foreground="Black" FontSize="15" Height="30" AutoWordSelection="True" VerticalContentAlignment="Center" MinHeight="0" MinWidth="0" TextChanged="year_tag_TextChanged" />
+            <s:SurfaceTextBox x:Name="year_tag" Width="308" BorderBrush="#227174" BorderThickness="2" Canvas.Left="312" Canvas.Top="86" Background="{x:Null}" TextWrapping="Wrap" Foreground="Black" FontSize="15" Height="30" AutoWordSelection="True" VerticalContentAlignment="Center" MinHeight="0" MinWidth="0" />
 
 
                     <Label Content="Artist:" Canvas.Left="218" Canvas.Top="124" Width="100" Foreground="Black"  FontSize="18" Height="30"/>
