--- a/trunk/GCNav/Navigator.xaml
+++ b/trunk/GCNav/Navigator.xaml
@@ -68,9 +68,8 @@
             <!--The catalog-->
         <my:ScatterView Height="100" HorizontalAlignment="Left" Name="mainScatterView" VerticalAlignment="Top" Width="192" Background="#FFA7C99F">
             <my:ScatterViewItem Height="50" Width="2300" HorizontalAlignment="Left" Name="mainScatterViewItem" VerticalAlignment="Top" CanRotate="False" MouseWheel="mainScatterViewItem_MouseWheel" SizeChanged="mainScatterViewItem_SizeChanged" ShowsActivationEffects="True" IsHitTestVisible="True" Opacity="1">
-                <Canvas>
-                    <Rectangle Name="_background" Fill="#FFA7C99F">
-                    </Rectangle>
+                <Canvas Width="{Binding ElementName=mainScatterViewItem, Path=ActualWidth}" Height="{Binding ElementName=mainScatterViewItem, Path=ActualHeight}">
+                    <Rectangle Name="_background" Fill="#FFA7C99F" Width="{Binding ElementName=mainScatterViewItem, Path=ActualWidth}" Height="{Binding ElementName=mainScatterViewItem, Path=ActualHeight}"/>
                     <Canvas Name="MainCanvas"/>
                 </Canvas>
             </my:ScatterViewItem>
