--- a/trunk/LADSArtworkMode/ArtworkModeWindow.xaml
+++ b/trunk/LADSArtworkMode/ArtworkModeWindow.xaml
@@ -104,8 +104,11 @@
                 <Canvas Width="1536" MinHeight="5" HorizontalAlignment="Stretch" DockPanel.Dock="Bottom">
 
                 </Canvas>
-                <s:SurfaceButton DockPanel.Dock="Top" Background="#4e765c" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="30" Click="BottomButtonClick"></s:SurfaceButton>
-                <s:SurfaceListBoxItem Name="Text" Background="Transparent" Width="300" Height="100" HorizontalAlignment="Center" VerticalAlignment="Top" Content="Bar cannot be docked during a tour" Opacity="0" Foreground="Black"/>
+                <Canvas x:Name="textBar" DockPanel.Dock="Top" Background="#4e765c" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="30" MouseDown="BottomButtonClick">
+                    <TextBlock Name="textMessage" Foreground="White" Text="Bar cannot be docked during a tour" Opacity="0" FontSize="16" Canvas.Top="2"/>
+                    
+                </Canvas>
+                <s:SurfaceListBoxItem Name="Text" Background="Transparent" Width="300" Height="100" HorizontalAlignment="Center" VerticalAlignment="Top" Content="Bar cannot be docked during a tour" Opacity="0" Foreground="Black" Visibility="Collapsed"/>
                 <s:SurfaceListBox Name="Bar" DockPanel.Dock="Bottom" ScrollViewer.ScrollChanged="BottomBarScroll" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Visible">
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
