--- a/LADSArtworkMode/ArtworkModeWindow.xaml
+++ b/LADSArtworkMode/ArtworkModeWindow.xaml
@@ -69,6 +69,7 @@
 
         <DockPanel Name="BottomPanel" Opacity=".9" Canvas.Top="864" Background="#eceff0" Height="216" Width="1920" Canvas.ZIndex ="100">
             <Grid Name="NavPanel" Background="#bdd0bd" DockPanel.Dock="Left" Width="384" Height="216">
+
                 <!-- zoom navigator -->
                 <Grid Margin="20, 20, 20, 20" Background="Black" ClipToBounds="True">
                     <dz:MultiScaleImage Name="msi_thumb" />
@@ -82,7 +83,29 @@
                 </Grid>
             </Grid>
             <DockPanel DockPanel.Dock="Right">
-                
+                <Canvas Name="collapseBar" Width="1536" HorizontalAlignment="Stretch" DockPanel.Dock="Top" Visibility="Visible" ZIndex="20">
+                    <Canvas Name="collapseButtonDown" Visibility="Visible" DockPanel.Dock="Top"  Height="30">
+                        <s:SurfaceButton  Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="450" VerticalAlignment="Center" HorizontalContentAlignment="Center" Click="BottomButtonClick" >
+                            <StackPanel>
+                                <Polygon Name="down" HorizontalAlignment="Center" Points="0,0 22,0 11,16" Fill="Black" Margin="0,3,0,0" />
+                               
+                            </StackPanel>
+
+                        </s:SurfaceButton>
+                    </Canvas>
+                    <Canvas  DockPanel.Dock="Top"  Height="30" Name="collapseButtonUp"  Visibility="Hidden"  >
+                            <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="450" VerticalAlignment="Center" HorizontalContentAlignment="Center" Click="BottomButtonClick" >
+                                <StackPanel>
+                                    <Polygon Name="up" HorizontalAlignment="Center" Points="0,22 22,22 11,0" Fill="Black"/>
+
+                                </StackPanel>
+
+                            </s:SurfaceButton>
+                    </Canvas>
+                   
+                    
+                </Canvas>
+
                 <Canvas Name="tourSeekBar" Width="1536" HorizontalAlignment="Stretch" DockPanel.Dock="Top" Visibility="Hidden">
                     <!-- tour seek bar -->
                     <s:SurfaceButton Name="tourExploreButton" Content="Explore" Height="30" Width="90" MinHeight="0" Padding="7 1 7 0" Canvas.Left="-200" Visibility="Collapsed" Canvas.Top="-30" HorizontalContentAlignment="Center" />
@@ -112,6 +135,7 @@
                 <Canvas Width="1536" MinHeight="5" HorizontalAlignment="Stretch" DockPanel.Dock="Bottom">
 
                 </Canvas>
+                
                 <Canvas x:Name="textBar" DockPanel.Dock="Top" Background="#4e765c" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="30" MouseUp="BottomButtonClick" TouchUp="BottomButtonClick">
                     <TextBlock Name="textMessage" Foreground="White" Text="Bar cannot be docked during a tour" Opacity="0" FontSize="16" Canvas.Top="2"/>
                     <TextBlock Name="verticalMessage" Foreground="White" Text="Toolbar cannot be opened during a tour" Opacity="0" FontSize="16" Canvas.Top="2"/>
@@ -133,8 +157,29 @@
         <DockPanel Name="LeftPanel" Opacity=".9" Canvas.Top="0" Canvas.Left="0" Height="864" Width="384" Background="#618276" Canvas.ZIndex="99">
 
             <s:SurfaceButton VerticalAlignment="Stretch" HorizontalAlignment="Right" Width="30" Background="#5a675f" Click="LeftButtonClick" DockPanel.Dock="Right">
-            </s:SurfaceButton>
+                <Canvas  Height="30"   >
+                    <Canvas Name="collapseButtonRight" Visibility="Hidden"  >
+                        <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="0" Canvas.Top="250">
+                            <StackPanel>
+                                <Polygon HorizontalAlignment="Center" Points="0,0 0,20 20,10" Fill="Black"/>
 
+                            </StackPanel>
+
+                        </s:SurfaceButton>
+                    </Canvas>
+                    <Canvas Name="collapseButtonLeft" Visibility="Visible"  >
+                        <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="0" Canvas.Top="250">
+                            <StackPanel>
+                                <Polygon HorizontalAlignment="Center" Points="20,0 20,20 0,10" Fill="Black"/>
+
+                            </StackPanel>
+
+                        </s:SurfaceButton>
+                    </Canvas>
+                </Canvas>
+               
+            </s:SurfaceButton>
+            
             <StackPanel Name="leftPaneContent" Background="#618276" DockPanel.Dock="Right">
                 <Canvas Name="Tools" 
                         Height="{Binding Height, ElementName=SectionBoxMaster}"
